Add other swagger
